FINAL DEPLOYMENT. APP WORKS BABY!!!